--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   hoveravatar      : "XiaoZHOU0.jpg"
   avatar           : "XiaoZHOU1.jpg"
   name             : "Xiao ZHOU"
-  pronouns         : "he/him"
-  bio              : "SLAM, Computer Vision, Autonomous Driving"
+  pronouns         : "she/her"
+  bio              : "Multi-agent system, Sequential Decision Making, Autonomous Driving, Robotic Perception"
   location         : "Guangzhou, China"
   employer         : "HKUSTGZ"
   uri              : https://simonwicks1.github.io/
