--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   hoveravatar      : "XiaoZHOU0.jpg"
   avatar           : "XiaoZHOU1.jpg"
   name             : "Xiao ZHOU"
-  pronouns         : "she/her"
+  pronouns         : "She/Her"
   bio              : "Multi-agent system, Sequential Decision Making, Autonomous Driving, Robotic Perception"
   location         : "Guangzhou, China"
   employer         : "HKUSTGZ"
